# zed-rest-client

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  extension.toml
languages/http/: config.toml  highlights.scm  runnables.scm  tasks.json
runner/: Cargo.toml
runner/src/: cache.rs  env.rs  executor.rs  jsonpath.rs  main.rs  output.rs  parser.rs
