[package]
name = "rest-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rest-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
uuid = { version = "1", features = ["v4"] }
